load("//misc/bazel:pkg.bzl", "codeql_pkg_files", "strip_prefix")

codeql_pkg_files(
    name = "downgrades",
    srcs = glob(
        ["**/*"],
        exclude = ["BUILD.bazel"],
    ),
    prefix = "downgrades",
    strip_prefix = strip_prefix.from_pkg(),
    visibility = ["//javascript:__pkg__"],
)
