load("@codeql_internal//:common.bzl", "codeql_fat_jar", "codeql_java_project")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")

java_library(
    name = "deps",
    visibility = [":__subpackages__"],
    exports = [
        "@codeql_internal//extractor:html",
        "@codeql_internal//extractor:yaml",
        "@codeql_internal//resources/lib/java:commons-compress",
        "@codeql_internal//resources/lib/java:gson",
        "@codeql_internal//resources/lib/java:jericho-html",
        "@codeql_internal//resources/lib/java:slf4j-api",
        "@codeql_internal//resources/lib/java:snakeyaml",
        "@codeql_internal//third_party:jackson",
        "@codeql_internal//third_party:logback",
        "@codeql_internal//util-java7",
        "@codeql_internal//util-java8",
    ],
)

codeql_java_project(
    name = "extractor",
    deps = [
        ":deps",
    ],
)

pkg_files(
    name = "javascript-extractor-resources",
    srcs = glob(["resources/**"]),
    strip_prefix = "resources",
)

codeql_fat_jar(
    name = "extractor-javascript",
    srcs = [
        ":extractor",
        "@codeql_internal//extractor:html",
        "@codeql_internal//extractor:xml-trap-writer",
        "@codeql_internal//extractor:yaml",
        "@codeql_internal//resources/lib/java:commons-compress",
        "@codeql_internal//resources/lib/java:gson",
        "@codeql_internal//resources/lib/java:jericho-html",
        "@codeql_internal//resources/lib/java:slf4j-api",
        "@codeql_internal//resources/lib/java:snakeyaml",
        "@codeql_internal//third_party:jackson",
        "@codeql_internal//third_party:logback",
        "@codeql_internal//util-java7",
        "@codeql_internal//util-java8",
    ],
    files = [":javascript-extractor-resources"],
    main_class = "com.semmle.js.extractor.Main",
)

pkg_files(
    name = "tools-extractor",
    srcs = [
        ":extractor-javascript",
    ],
    prefix = "tools",
    visibility = ["//visibility:public"],
)
