alias(
    name = "ripunzip",
    actual = select({"@platforms//os:" + os: "@ripunzip-" + os for os in ("linux", "windows", "macos")}),
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "install",
    srcs = ["install.sh"],
    args = ["$(rlocationpath :ripunzip)"],
    data = [":ripunzip"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
