load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")

pkg_files(
    name = "downgrades",
    srcs = glob(
        ["**"],
        exclude = ["BUILD.bazel"],
        allow_empty = True,
    ),
    prefix = "downgrades",
    strip_prefix = strip_prefix.from_pkg(),
    visibility = ["//php:__pkg__"],
)
